c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/scalar_required/cast_struct_to_scalar.c
struct s {
  int a;
};

int main(void) {
  struct s x = {1};
  // can't cast struct to a scalar value
  int y = (int)x;
  return y;
}